Minor updates to the introduction.

--- a/biblio.bib
+++ b/biblio.bib
@@ -33,8 +33,7 @@
   booktitle={2010 11th IEEE/ACM International Conference on Grid Computing (GRID)},
   pages={65--72},
   year={2010},
-  author={Yigitbasi, Nezih and et al.},
-%  author={Yigitbasi, Nezih and Gallet, Matthieu and Kondo, Derrick and Iosup, Alexandru and Epema, Dick},
+  author={Yigitbasi, Nezih and Gallet, Matthieu and Kondo, Derrick and Iosup, Alexandru and Epema, Dick},
 }
 
 @inproceedings{da2013toward,
@@ -65,8 +64,7 @@
 
 @inproceedings{schuller2008chemomentum,
   title={Chemomentum-UNICORE 6 based infrastructure for complex applications in science and technology},
-%  author={Schuller, Bernd and Demuth, Bastian and Mix, Hartmut and Rasch, Katharina and Romberg, Mathilde and Sild, Sulev and Maran, Uko and Ba{\l}a, Piotr and Del Grosso, Enrico and Casalegno, Mos{\'e} and others},
-  author={Schuller, Bernd and et al.},
+  author={Schuller, Bernd and Demuth, Bastian and Mix, Hartmut and Rasch, Katharina and Romberg, Mathilde and Sild, Sulev and Maran, Uko and Ba{\l}a, Piotr and Del Grosso, Enrico and Casalegno, Mos{\'e} and others},
   booktitle={Euro-Par 2007 Workshops: Parallel Processing},
   pages={82--93},
   year={2008},
@@ -172,7 +170,7 @@ booktitle={Parallel and Distributed Processing Symposium, 2007. IPDPS 2007. IEEE
 year={2007}, 
 pages={1-8}, 
 
-},
+}
 
 @article{Sakellariou2004,
  author = {Sakellariou, Rizos and Zhao, Henan},
@@ -189,7 +187,7 @@ pages={1-8},
  acmid = {1240165},
  publisher = {IOS Press},
  address = {Amsterdam, The Netherlands, The Netherlands},
-},
+}
 
 @INPROCEEDINGS{Yu2008, 
 author={Jiong Yu and Guo-Zhong Tian and Ling Cheng}, 
@@ -197,7 +195,7 @@ booktitle={Embedded and Ubiquitous Computing, 2008. EUC '08. IEEE/IFIP Internati
 year={2008}, 
 volume={2}, 
 pages={417-422}, 
-},
+}
 
 @INPROCEEDINGS{Huu2010, 
 author={Huu, T.T. and Montagnat, J.}, 
@@ -216,7 +214,7 @@ year = {2012},
 pages = {719-720},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
-},
+}
 
 @INPROCEEDINGS{Pop2008, 
 author={Pop, F. and Dobre, C. and Cristea, V.}, 
@@ -224,7 +222,7 @@ booktitle={Symbolic and Numeric Algorithms for Scientific Computing, 2008. SYNAS
 year={2008}, 
 pages={557-563}, 
 
-},
+}
 
 @inproceedings{Adamuthe2011,
  author = {Adamuthe, A. C. and Bichkar, R. S.},
@@ -238,7 +236,7 @@ pages={557-563},
  acmid = {1980097},
  publisher = {ACM},
  address = {New York, NY, USA},
-},  
+}
 
 
 @article{Soni2010,
@@ -248,16 +246,17 @@ year="2005",
 volume="65",
 pages="781",
 author="Soni, Vishnu Kant and Sharma, Raksha and Mishra, Manoj Kumar",
-},
+}
 
 @article{Ang2009,
 title="A bandwidth-aware job grouping-based scheduling on grid environment",
 journal="Information Technology Journal",
-number="8",
+volume="8",
+numer="3",
 pages="372-377",
 year="2009",
-author="T.F. Ang, W.K. Ng, T.C. Ling, L.Y. Por and C.S. Liew"
-},
+author="T.F. Ang and W.K. Ng and T.C. Ling and L.Y. Por and C.S. Liew"
+}
 
 @article{Keat2006,
 title="Scheduling framework for bandwidth-aware job grouping-based scheduling in grid computing",
@@ -267,8 +266,8 @@ number="2",
 pages="117-126",
 year="2006",
 issn="0127-9084",
-author="Ng, Wai Keat, and Ang, T.F., and Ling, T.C., and Liew, C.S",
-},
+author="Ng, Wai Keat and Ang, T.F. and Ling, T.C. and Liew, C.S",
+}
 
 @article{Muthuvelu2013,
 title = "Task granularity policies for deploying bag-of-task applications on global grids ",
@@ -280,7 +279,7 @@ year = "2013",
 note = "<ce:title>Including Special section: AIRCC-NetCoM 2009 and Special section: Clouds and Service-Oriented Architectures</ce:title> ",
 issn = "0167-739X",
 author = "Nithiapidary Muthuvelu and Christian Vecchiola and Ian Chai and Eswaran Chikkannan and Rajkumar Buyya",
-},
+}
 
 
 
@@ -296,7 +295,7 @@ author = "Nithiapidary Muthuvelu and Christian Vecchiola and Ian Chai and Eswara
  acmid = {2345467},
  publisher = {ACM},
  address = {New York, NY, USA},
-} ,
+}
 
 @inproceedings{Adamuthe2011,
  author = {Adamuthe, A. C. and Bichkar, R. S.},
@@ -310,7 +309,7 @@ author = "Nithiapidary Muthuvelu and Christian Vecchiola and Ian Chai and Eswara
  acmid = {1980097},
  publisher = {ACM},
  address = {New York, NY, USA},
-} ,
+}
 
 
 
@@ -325,7 +324,7 @@ pages = {736-739},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
 }
-,
+
 
 @INPROCEEDINGS{Meinl2008, 
 author={Meinl, T.}, 
@@ -384,7 +383,7 @@ pages={612-619},
  acmid = {1595741},
  publisher = {ACM},
  address = {New York, NY, USA},
-}, 
+}
 
 @incollection{Ferreira-granularity-2013,
 	year={2013},
@@ -410,7 +409,7 @@ pages={612-619},
  acmid = {2089006},
  publisher = {ACM},
  address = {New York, NY, USA},
-},
+}
 
 @INPROCEEDINGS{Egwutuoha2012, 
 author={Egwutuoha, I.P. and Shiping Chen and Levy, D. and Selic, B.}, 
@@ -418,7 +417,7 @@ booktitle={12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Comp
 year={2012}, 
 pages={709-710}, 
 
-},
+}
 
 @inproceedings{Silva2012,
 	author = {Ferreira da Silva, Rafael and Glatard, Tristan and Desprez, Fr\'ed\'eric},
@@ -436,7 +435,7 @@ author={Kumar, S. and Das, S.K. and Biswas, R.},
 booktitle={Parallel and Distributed Processing Symposium., Proceedings International, IPDPS 2002, Abstracts and CD-ROM}, 
 title={Graph partitioning for parallel applications in heterogeneous Grid environments}, 
 year={2002}, 
-},
+}
 
 @INPROCEEDINGS{Ranganathan2001,
     author = {Kavitha Ranganathan and Ian Foster},
@@ -444,7 +443,7 @@ year={2002},
     booktitle = {In Proc. of the International Grid Computing Workshop},
     year = {2001},
     pages = {75--86}
-},
+}
 
 @inproceedings{Shankar2007,
  author = {Shankar, Srinath and DeWitt, David J.},
@@ -459,7 +458,7 @@ year={2002},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {cluster management, condor, data management, planning, scheduling, scientific computing, workflow management},
-},
+}
 
 
 @INPROCEEDINGS{Kosar2004, 
@@ -468,7 +467,7 @@ booktitle={Distributed Computing Systems, 2004. Proceedings. 24th International 
 year={2004}, 
 pages={342-349}, 
 ISSN={1063-6927},
-},
+}
 
 @inproceedings{Meyer2006,
  author = {Meyer, Luiz and Annis, James and Wilde, Mike and Mattoso, Marta and Foster, Ian},
@@ -483,7 +482,7 @@ ISSN={1063-6927},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {file transfer, grid, performance, spatial workflow},
-},
+}
 
 @INPROCEEDINGS{Khan2012, 
 author={Khan, A. and Yan, X. and Shu Tao and Anerousis, N.}, 
@@ -491,7 +490,7 @@ booktitle={Network Operations and Management Symposium (NOMS), 2012 IEEE}, title
 year={2012}, 
 pages={1287-1294}, 
 ISSN={1542-1201},
-},
+}
 
 @INPROCEEDINGS{Zhang2000,
     author = {Xiaodong Zhang and Yanxia Qu and Li Xiao},
@@ -499,7 +498,7 @@ ISSN={1542-1201},
     booktitle = {Proceedings of 20th International Conference on Distributed Computing Systems, (ICDCS'2000},
     year = {2000},
     pages = {233--241}
-},
+}
 
 @INPROCEEDINGS{Zhenhua2011, 
 author={Zhenhua Guo and Pierce, M. and Fox, G. and Mo Zhou}, 
@@ -513,7 +512,7 @@ author={Ranjan, R. and Rahman, M. and Buyya, R.},
 booktitle={8th IEEE International Symposium on Cluster Computing and the Grid (CCGRID) }, title={A Decentralized and Cooperative Workflow Scheduling Algorithm}, 
 year={2008}, 
 pages={1-8}, 
-},
+}
 
 @article{Yang2007,
  author = {Yang, Juan and Bai, Yun and Qiu, Yuhui},
@@ -530,7 +529,7 @@ pages={1-8},
  acmid = {1221891},
  publisher = {Elsevier Science Publishers B. V.},
  address = {Amsterdam, The Netherlands, The Netherlands},
-},
+}
 
 
 @INPROCEEDINGS{Cao2008, 
@@ -538,7 +537,7 @@ author={Haijun Cao and Hai Jin and Xiaoxin Wu and Song Wu and Xuanhua Shi},
 booktitle={9th IEEE/ACM International Conference on Grid Computing}, title={DAGMap: Efficient scheduling for DAG grid workflow job}, 
 year={2008}, 
 pages={17-24}, 
-},
+}
 
 
 @INPROCEEDINGS{Kwok2000, 
@@ -553,7 +552,7 @@ author={Yuan Luo and Plale, B.},
 booktitle={12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGrid '12) }, title={Hierarchical MapReduce Programming Model and Scheduling Algorithms}, 
 year={2012}, 
 pages={769-774}, 
-},
+}
 
 @INPROCEEDINGS{Sadayappan2008,
 year={2008},
@@ -565,7 +564,7 @@ editor={Sadayappan, Ponnuswamy and Parashar, Manish and Badrinath, Ramamurthy an
 title={Performance Analysis of Multiple Site Resource Provisioning: Effects of the Precision of Availability Information},
 author={Assunção, MarcosDias and Buyya, Rajkumar},
 pages={157-168}
-},
+}
 
 
 @article{Elmroth2009,
@@ -583,14 +582,14 @@ pages={157-168}
  acmid = {1656509},
  publisher = {John Wiley and Sons Ltd.},
  address = {Chichester, UK},
-},
+}
 
 @INPROCEEDINGS{Gehr2009, 
 author={Gehr, J. and Schneider, J.}, 
 booktitle={9th IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID '09). }, title={Measuring Fragmentation of Two-Dimensional Resources Applied to Advance Reservation Grid Scheduling}, 
 year={2009}, 
 pages={276-283}, 
-},
+}
 
 
 @INPROCEEDINGS{Tomas2012, 
@@ -609,7 +608,7 @@ title={Enabling workflows in GridSolve: request sequencing and service trading},
 keywords={Grid computing; Workflow applications; Service trading},
 author={Li, Yinan and YarKhan, Asim and Dongarra, Jack and Seymour, Keith and Hurault, Aurèlie},
 pages={1-20},
-},
+}
 
 
 @inproceedings{Caniou2011,
@@ -734,8 +733,7 @@ pages={86-93},
 	title={A Dynamic Job Grouping-Based Scheduling for Deploying Applications with Fine-Grained Tasks on Global Grids},
 	year={2005},
 	booktitle={Australasian workshop on Grid computing and e-research},
-	author={Nithiapidary Muthuvelu and et al.},	
-%	author={Nithiapidary Muthuvelu and Junyang Liu and Nay Lin Soe and Srikumar Venugopal and Anthony Sulistio and Rajkumar Buyya},	
+	author={Nithiapidary Muthuvelu and Junyang Liu and Nay Lin Soe and Srikumar Venugopal and Anthony Sulistio and Rajkumar Buyya},	
 },
 
 @inproceedings{Integration2012,
@@ -813,14 +811,13 @@ pages={86-93},
  title = {Job and data clustering for aggregate use of multiple production cyberinfrastructures},
  booktitle = {fifth international workshop on Data-Intensive Distributed Computing Date},
  year = {2012},
- author = {Maheshwari, Ketan and et al.},
-% author = {Maheshwari, Ketan and Espinosa, Allan and Katz, Daniel S. and Wilde, Michael and Zhang, Zhao and Foster, Ian and Callaghan, Scott and Maechling, Phillip},
+ author = {Maheshwari, Ketan and Espinosa, Allan and Katz, Daniel S. and Wilde, Michael and Zhang, Zhao and Foster, Ian and Callaghan, Scott and Maechling, Phillip},
 
 },
 
 @article{Malawski2012,
   title={Cost-and Deadline-Constrained Provisioning for Scientific Workflow Ensembles in IaaS Clouds},
-  author={Malawski, Maciej and Juve, Gideon and Deelman, Ewa and Nabrzyski, Jarek}
+  author={Malawski, Maciej and Juve, Gideon and Deelman, Ewa and Nabrzyski, Jarek},
   journal={24th IEEE/ACM Conference on Supercomputing},
  year={2012},
 },
@@ -1007,7 +1004,7 @@ pages={167-},
 @misc{Matlab,
 	author={Matlab Interactive distribution fitting},
 	title={Matlab Interactive Distribution Fitting},
-	url={http://www.mathworks.com/help/toolbox/stats/dfittool.html}
+	url={http://www.mathworks.com/help/toolbox/stats/dfittool.html},
 	howpublished={\url{http://www.mathworks.com/help/toolbox/stats/dfittool.html}}
 },
 
@@ -1439,8 +1436,7 @@ pages={389 -400},
     month = jan,
     year = {2011},
     pages = {23--50},
-   author = {Calheiros, Rodrigo N. and et al.},
-%            author = {Calheiros, Rodrigo N. and Ranjan, Rajiv and Beloglazov, Anton and De Rose, César A. F. and Buyya, Rajkumar},
+    author = {Calheiros, Rodrigo N. and Ranjan, Rajiv and Beloglazov, Anton and De Rose, César A. F. and Buyya, Rajkumar},
 },
 
 @inproceedings{Callaghan2008,
@@ -3027,7 +3023,7 @@ pages={23-30},
 	title={Combined Fault Tolerance and Scheduling Techniques for Workflow Applications on Computational Grids},
 	year={2009},
 	pages={244-251},
-%	doi={10.1109/CCGRID.2009.59},
+	doi={10.1109/CCGRID.2009.59},
 }
 
 @INPROCEEDINGS{5671856,
